# Hephaestus

./: .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  build.sh  clean.sh  config.h.in  meson.build  run.sh
.github/workflows/: codacy.yml  codeql.yml
include/: archive_util.h  engine.h  file_util.h  json_util.h  lua_util.h  mem.h
include/engine/: archive_util.h  engine.h  file_util.h  json_util.h  lua_util.h  mem.h
include/enginel/: enginel.h  graphics.h  input.h  text.h  window.h
include/util/: archive_helper.h  file.h  json_helper.h  log.h  lua_helper.h  mem.h
scripts/: test.lua
src/: archive_util.c  engine.c  file_util.c  json_util.c  lua_util.c  main.c  mem.c  raygui_impl.c
src/engine/: archive_util.c  engine.c  file_util.c  json_util.c  lua_util.c  mem.c
src/enginel/: enginel.c  graphics.c  input.c  text.c  window.c
src/util/: archive_helper.c  file.c  json_helper.c  log.c  lua_helper.c  mem.c
subprojects/: .gitignore
tools/: xxd.py
